# arq_sw

./: .gitignore  README.md
aulas/: ementa_disciplina.md
cad_alunos/: participe.md
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/: README.md  pyproject.toml  requirements.txt
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio1_rotasFLask/prototipo1/: routes.py
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio1_rotasFLask/prototipo1/templates/: base.html
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio1_rotasFLask/prototipo2/: README.md  main.py  services.py
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio1_rotasFLask/prototipo2/templates/: professor.html
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio2_flask_e_IMIP_1/: README.md
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio2_flask_e_IMIP_1/presentation/: modelo_base.txt
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio2_flask_e_IMIP_1/prototipo/: routes.py
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio3_flask_e_IMIP_2/: README.md
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio3_flask_e_IMIP_2/prototipo/core/: app.py  routes.py
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio3_flask_e_IMIP_2/prototipo/database/: schema.sql
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio4_flask_e_IMIP_3/: README.md
desafios/MANHA_2026-1/AlfabetizaAI_3P/Desafios_Iniciais/Desafio4_flask_e_IMIP_3/prototipo/core/: app.py  routes.py
(+503 files in other folders)
