[project]
name = "alfabetizaai-3p"
version = "0.1.0"
description = "Diretorio de atividade de arquitetura de software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=2.30.0",
    "requests>=2.33.0",
]
